Сверстан блок новостей

--- a/index.html
+++ b/index.html
@@ -119,7 +119,141 @@
       </section>
     </header>
     <main class="content">
-        <section></section>
+        <section class="promo__content">
+            <div class="nav__content">
+                <h4 class="nav__title">Целевые предложения</h4>
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Кафе, барам, ресторанам</p><p class="nav__item-pointer">&gt;</p></div></li>
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Детским садам и школам</p><p class="nav__item-pointer">&gt;</p></div></li>
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Таблет-питание</p><p class="nav__item-pointer">&gt;</p></div></li>
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Для столовых</p><p class="nav__item-pointer">&gt;</p></div></li>
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Для пищеблоков</p><p class="nav__item-pointer">&gt;</p></div></li>
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Государственным заказам</p><p class="nav__item-pointer">&gt;</p></div></li>
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Для магазинов</p><p class="nav__item-pointer">&gt;</p></div></li>
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Для войсковых частей</p><p class="nav__item-pointer">&gt;</p></div></li>
+                    <li class="nav__item">
+                        <div class="nav__conteiner"><p class="nav__text">Все предложения</p><p class="nav__item-pointer">&gt;</p></div></li>
+                </ul>
+            </div>
+            <div class="slider">
+                <div>
+                    <img class="slider__img" src="./image/слайдер.png"/>
+                </div>
+            </div>
+            <div class="sale">
+                <div class="sale__conteiner">
+                    <img class="sale__image" src="./image/подарок.png"/>
+                    <p class="sale__text">Самые низкие цены</p>
+                    <h3 class="sale__title">Распродажа</h3>
+                    <a class="sale__link" href="#">Католог распродаж &nbsp;<span>&gt;</span></a>
+                </div>
+            </div>
+        </section>
+        <section class="brands">
+            <div class="brand__container">
+                <div class="brand__item">
+                    <img  class="brand__image" src="./image/abat.png" alt=""/>
+                </div>
+                <div class="brand__item">
+                    <img  class="brand__image" src="./image/atesy.png" alt=""/>
+                </div>
+                <div class="brand__item">
+                    <img  class="brand__image" src="./image/hicold.png" alt=""/>
+                </div>
+                <div class="brand__item">
+                    <img  class="brand__image" src="./image/rational.png" alt=""/>
+                </div>
+                <div class="brand__item">
+                    <img  class="brand__image" src="./image/simeco.png" alt=""/>
+                </div>
+                <div class="brand__item">
+                    <a href="#" class="brand__link">Все бренды</a>
+                </div>
+            </div>
+        </section>
+       <section class="news">
+           <h1 class="news__title">Новости производителей</h1>
+           <div class="news__conteiner">
+               <div class="news__item news__item-big">
+                   <div class="news__img-big">
+                    <img class="news__img" src="./image/новости1.png" alt="Пекарный шкаф"/>
+                   </div>
+                   <div class="news__info-big">
+                       <div class="news__content">
+                           <p class="news__author">Abat</p>
+                           <p class="news__data">22.06.17</p>
+                       </div>
+                       <div class="news__text">
+                           <h3 class="news__item-title">Новый разборный ротационный пекарский 
+                            шкаф РПШ-18-8-6МР</h3>
+                            <p class="news__paragraph">Новый разборный ротационный пекарский шкаф РПШ-18-8-6МР:  в комплекте тележка-шпилька ТШГ-18 на 18 уровней 600х800 мм вместимость тележки-шпильки - 135 хлебных форм №7
+                                инжекционный тип парообразования
+                                разборная конструкция увеличенное стекло двери. 
+                                Память на 110 программ (до 4-ех этапов в каждой программе)
+                                USB-порт. Таймер до 10 ч 
+                                Регулировка влажности от 0 до 100%.  5 скоро</p>
+                       </div>
+                   </div>
+               </div>
+               <div class="news__item news__item-row">
+                   <div class="news__img-row">
+                    <img class="news__img" src="./image/новости3.png" alt="Посудомоечная машина"/>
+                   </div>
+                <div class="news__info">
+                    <div class="news__content">
+                        <p class="news__author">Abat</p>
+                        <p class="news__data">22.06.17</p>
+                    </div>
+                    <div class="news__text">
+                        <h2 class="news__item-title">Повышение энергоэффективности туннельных посудомоечных машин МПТ торговой марки Abat</h2>
+                         <p class="news__paragraph">С целью снижения нагрузки на электрическую сеть и для повышения энергоэффективности изделий с 1 июня 2017 года был изменен алгоритм работы туннельных посудомоечных машин МПТ торговой марки Abat всех моделей... </p>
+                    </div>
+                </div>
+            </div>
+               <div class="news__item news__item-row">
+                <div class="news__img-row">
+                    <img class="news__img" src="./image/новости2.png" alt="Посудомоечная машина"/>
+                </div>
+                <div class="news__info">
+                    <div class="news__content">
+                        <p class="news__author">Abat</p>
+                        <p class="news__data">22.06.17</p>
+                    </div>
+                    <div class="news__text">
+                        <h2 class="news__item-title">Повышение энергоэффективности туннельных посудомоечных машин МПТ торговой марки Abat</h2>
+                         <p class="news__paragraph">С целью снижения нагрузки на электрическую сеть и для повышения энергоэффективности изделий с 1 июня 2017 года был изменен алгоритм работы туннельных посудомоечных машин МПТ торговой марки Abat всех моделей... </p>
+                    </div>
+                </div>
+            </div>
+               <div class="news__item news__item-row">
+                <div class="news__img-row">
+                    <img class="news__img" src="./image/новости3.png" alt="Посудомоечная машина"/>
+                </div>
+                <div class="news__info">
+                    <div class="news__content">
+                        <p class="news__author">Abat</p>
+                        <p class="news__data">22.06.17</p>
+                    </div>
+                    <div class="news__text">
+                        <h2 class="news__item-title">Повышение энергоэффективности туннельных посудомоечных машин МПТ торговой марки Abat</h2>
+                         <p class="news__paragraph">С целью снижения нагрузки на электрическую сеть и для повышения энергоэффективности изделий с 1 июня 2017 года был изменен алгоритм работы туннельных посудомоечных машин МПТ торговой марки Abat всех моделей... </p>
+                    </div>
+                </div>
+            </div>
+           </div>
+           <div class="news__link-button">
+            <a href="#" class="news__link">Все новости</a>
+           </div>
+       </section>
+   
     </main>
   </body>
 </html>
