--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <header class="header">
       <div class="header__top">
         <div class="menu-top header__content">
+          <div class="header__burger">
+            <span></span>
+          </div>
           <nav class="menu-top__nav">
             <ul class="menu-top__list">
               <li>Компания</li>
@@ -55,7 +58,7 @@
           </nav>
         </div>
       </div>
-      <section class="header__search">
+      <section class="header-search">
         <div class="header__search-conteiner header__content">
           <div class="header__logo">
             <a href="#">
@@ -65,12 +68,16 @@
                 height="40"
                 src="./image/logo-black.png"
                 alt="Логотип Столовая.ру"
-              /><span class="logo__text">Столовая.РУ</span>
-              <p class="header__logo-subtitle">
-                Создание оптимальных пищеблоков
-              </p>
+              />
+              <div class="logo__content">
+                <span class="logo__text">Столовая.РУ</span>
+                <p class="header__logo-subtitle">
+                  Создание пищеблоков
+                </p>
+              </div>
             </a>
           </div>
+          <div class="btn__search"></div>
           <div class="header__form-conteiner">
             <div class="select">
               <select>
@@ -99,6 +106,7 @@
             <div class="supplier__image"></div>
             <p class="supplier__text">Мы на портале поставщиков</p>
           </div>
+          <div class="phone"></div>
           <div class="header__basket">
             <div class="basket">
               <p class="basket__count">12</p>
@@ -111,7 +119,7 @@
           </div>
         </div>
       </section>
-      <section class="header__products">
+      <section class="header-products">
         <div class="header__products-conteiner header__content">
           <ul class="products__nav">
             <li>
@@ -208,7 +216,7 @@
     </header>
     <main class="content">
       <section class="promo__content header__content">
-        <div class="nav__content">
+        <div class="nav-content">
           <h4 class="nav__title">Целевые предложения</h4>
           <div class="nav__item nav__item-mobile">
             <div class="nav__conteiner">
@@ -273,7 +281,7 @@
             </li>
           </ul>
         </div>
-        <div class="slider">
+        
           <div class="image-slider swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -374,7 +382,7 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
           </div>
-        </div>
+       
         <div class="sale">
           <div class="sale__conteiner">
             <img
@@ -666,7 +674,7 @@
           </ul>
         </div>
       </section>
-      <section class="footer__navigation">
+      <section class="footer-navigation">
         <div class="navigation main__content">
           <nav class="footer-nav__list">
             <p class="footer__subtitle">
